thumbnailer (2.3+16.04.20160108.2-0ubuntu2) UNRELEASED; urgency=medium

  [ Michi Henning]
  * Fixed incorrect build dependency for settings-defaults.h.

 -- Michi Henning <michi.henning@canonical.com>  Sat, 09 Jan 2016 13:21:19 +1000

thumbnailer (2.3+16.04.20160108.2-0ubuntu1) xenial; urgency=medium

  [ Michi Henning ]
  * Fixed incorrect display of cache policy by "thumbnailer-admin stats".
  * Limit GIF file size to 2 MB (LP: #1527315).
  * Fix non-working config settings for client-side API (LP: #1528058).

  [ CI Train Bot ]
  * No-change rebuild.

 -- Michi Henning <michi.henning@canonical.com>  Fri, 08 Jan 2016 12:43:17 +0000

thumbnailer (2.3+16.04.20160107.1-0ubuntu1) xenial; urgency=medium

  * Fix for lp:1531038. Much better user experience this way. (LP:
    #1531038)

 -- Michi Henning <michi.henning@canonical.com>  Thu, 07 Jan 2016 06:33:30 +0000

thumbnailer (2.3+16.04.20160107-0ubuntu1) xenial; urgency=medium

  [ Michi Henning ]
  * Ignored failing tests on PPC due to gstreamer problems.
  * Fixed crash that happened if the service was shut down
    while there were requests still processing in the
    thread pools.
  * Fixed incorrect handling of 400 (Bad Request) response from
    remote server (LP: #1512608).
  * Passing an invalid size to the QML or Qt APIs is now an error.
  * Added new gsettings key "log-level". Amount of noise in the logs
    is now reduced. Set log-level to 2 for verbose logging.

  [ CI Train Bot ]
  * No-change rebuild.

 -- Michi Henning <michi.henning@canonical.com>  Thu, 07 Jan 2016 04:36:39 +0000

thumbnailer (2.3+16.04.20151102.2-0ubuntu1) xenial; urgency=medium

  [ Michi Henning ]
  * "thumbnailer-admin clear f" now also resets the network retry timeout.
  * API documentation and man page improvements.
  * Videos with embedded artwork now display the artwork thumbnail instead
    of an extracted still frame (LP: #1510801).
  * Added cancelled() accessor to Request class.