@@ -9,8 +9,8 @@ target_link_libraries(qml_test
 )
 add_dependencies(qml_test thumbnailer-service thumbnailer-qml)
 
-message("Arch: ${CMAKE_LIBRARY_ARCHITECTURE}")
-if (${CMAKE_LIBRARY_ARCHITECTURE} STREQUAL "powerpc" OR ${CMAKE_LIBRARY_ARCHITECTURE} STREQUAL "s390x")
+if (${CMAKE_LIBRARY_ARCHITECTURE} STREQUAL "powerpc-linux-gnu"
+    OR ${CMAKE_LIBRARY_ARCHITECTURE} STREQUAL "s390x-linux-gnu")
     message("Skipping qml test for ${CMAKE_LIBRARY_ARCHITECTURE}")
 else()
     add_test(qml ${CMAKE_SOURCE_DIR}/tools/run-xvfb.sh ./qml_test -import ${CMAKE_BINARY_DIR}/plugins)
